# news-scraper

./: .env.example  .gitignore  Makefile  README.md  project-brief.md  pyproject.toml  requirements.txt
deploy/: README.md  healthcheck.sh  logrotate.conf
deploy/cron/: news-pipeline.cron
deploy/systemd/: literature-collector@.service  news-collector@.service
docs/: runbook.md  start-server.md
migrations/: 0001_init_schema.sql  0002_indexes.sql  0003_seed_sources.sql  0004_fix_treasury_source_type.sql  0005_literature_init_schema.sql  0006_literature_indexes.sql  0007_literature_seed_sources.sql  0008_fix_allquant_feed_url.sql  0009_activate_sciencedirect_journals.sql  0010_gdelt_rollup_15min.sql
src/news_archive/: __init__.py  config.py  db.py  hashing.py  http.py  logging_config.py  models.py
src/news_archive/collectors/: __init__.py  base.py  bls_releases.py  econ_calendar_ff.py  fed_fomc_statements.py  fed_speeches.py  gdelt_gkg.py  run.py  sec_edgar_mag7.py  treasury_press.py  wires.py
src/news_archive/literature/: __init__.py  db.py  models.py
src/news_archive/monitoring/: gaps.py  report.py
src/news_archive/scripts/: __init__.py  backfill_gdelt_rollups.py  daily_report.py  end_to_end_test.py  gap_check.py  run_migrations.py  (+1 more)
tests/: conftest.py  test_arxiv_qfin.py  test_blog_rss.py  test_bls_releases.py  test_econ_calendar_ff.py  test_fed_fomc_statements.py  test_fed_speeches.py  test_gaps.py  test_gdelt_gkg.py  test_hashing.py  test_models.py  test_report.py  test_rss_feed.py  test_sec_edgar_mag7.py  test_treasury_press.py  test_wires.py
(+8 files in other folders)
