[project]
name = "news-archive"
version = "0.1.0"
description = "24/7 news collection pipeline archiving financial news, Fed communications, economic releases, and SEC filings into Supabase Postgres."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Benito Alvarez Taddei", email = "bataddei@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0.11",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=9.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["news_archive"]
